# fcwt-rs

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.direnv/: flake-profile-1-link
benches/: alloc.rs  transform.rs
examples/: alloctest.rs  gui.rs  prof.rs
src/: fcwt.rs  fft.rs  lib.rs  result.rs  scales.rs  util.rs  wavelet.rs
