[package]
name = "fcwt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/boondockenergy/fcwt-rs"
description = "Fast Continuous Wavelet Transforms"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.2.0"
