[package]
name = "fcwt"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/boondockenergy/fcwt-rs"
description = "Fast Continuous Wavelet Transforms"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fftw = { version = "0.8.0", optional = true }
rustfft = "6.2.0"

[features]
# Enable FFTW backend
fftw = ["dep:fftw"]

[dev-dependencies]
egui = "0.26.2"
eframe = { version = "0.26.2", features = ["wgpu"] }
egui_plot = "0.26.2"
csv = "1.3.0"
serde = { version="1.0.197", features = ["derive", "alloc"] }
