[package]
name = "fcwt"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/boondocklabs/fcwt-rs"
description = "Fast Continuous Wavelet Transforms"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fftw = { version = "0.8.0", optional = true }
puffin = { version = "0.19.0", optional = true }
rayon = "1.8.1"
rustfft = "6.2.0"

[features]
# Enable FFTW backend
fftw = ["dep:fftw"]
profile = ["dep:puffin"]

[dev-dependencies]
mimalloc = "0.1.39"
egui = "0.26.2"
eframe = { version = "0.26.2", features = ["wgpu"] }
egui_plot = "0.26.2"
csv = "1.3.0"
serde = { version="1.0.197", features = ["derive", "alloc"] }
puffin_egui = "0.26"
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
#debug = 1
opt-level = 3
#strip = "debuginfo"
lto = "off"
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "transform"
harness = false
